_LoadConsole approximates usage of _HandleConsole now Removed empty Arch keys from some payloads Meterpreter is now mostly functional via msfweb

--- a/data/msfweb/style.css
+++ b/data/msfweb/style.css
@@ -130,3 +130,15 @@ A.nav {
 	color:			black;
 	font-weight: 	bold;
 }
+
+.textBoldGrey {
+	font-size:		10pt;
+	color:			grey;
+	font-weight: 	bold;
+}
+
+.textBoldWhite {
+	font-size:		10pt;
+	color:			white;
+	font-weight: 	bold;
+}
