--- a/data/msfweb/themes/default/style.css
+++ b/data/msfweb/themes/default/style.css
@@ -9,6 +9,7 @@ body
     font-family:    Verdana, Tahoma, Arial, Helvetica, sans-serif;
     color:          black;
     font-size:      10pt;
+	margin:			0.1cm 0.5cm 0.1cm 0.5cm;
 }
 
 A { 
