--- a/data/msfweb/themes/gblack/style.css
+++ b/data/msfweb/themes/gblack/style.css
@@ -124,7 +124,6 @@ A.nav {
 }
 
 .textBoldBright {
-	background:		#111111;
 	font-size:		10pt;
 	color:			white;
 	font-weight: 	bold;
@@ -179,4 +178,33 @@ select {
 }
 
 
+.iconset 
+{
+	background: white;
+	padding: 2px 2px 2px 2px;
+	border: 1px solid #111111;
+}
 
+#moduleList
+{
+
+}
+
+#moduleName
+{
+	border-top: 1px solid #111111;
+	border-left: 1em solid #111111;
+	padding: 0.5em 0.5em 0.5em 1em;
+}
+	
+#moduleIcons
+{
+	border-top: 1px solid #111111;
+	padding: 0.5em 0.5em 0em 1em;
+}
+
+#moduleSpacer 
+{
+	padding: 10px 0px 0px 0px;
+	margin: 0;
+}
