--- a/data/msfweb/themes/gwhite/style.css
+++ b/data/msfweb/themes/gwhite/style.css
@@ -183,20 +183,20 @@ select {
 
 #moduleList
 {
-
+	white-space: nowrap;
 }
 
-#moduleName
-{
-	border-top: 1px solid #bbbbbb;
-	border-left: 1em solid #bbbbbb;
-	padding: 0.5em 0.5em 0.5em 1em;
-}
-	
 #moduleIcons
 {
-	border-top: 1px solid #bbbbbb;
-	padding: 0.5em 0.5em 0em 1em;
+	border-top: 1px solid #aaaaaa;
+	border-left: 1em solid #aaaaaa;
+	padding: 0.5em 0em 0em 0.25em;
+}
+		
+#moduleName
+{
+	border-top: 1px solid #aaaaaa;
+	padding: 0.5em 0.5em 0em 0em;
 }
 
 #moduleSpacer 
