--- a/data/msfweb/themes/gblack/style.css
+++ b/data/msfweb/themes/gblack/style.css
@@ -185,25 +185,25 @@ select {
 	border: 1px solid #111111;
 }
 
-#moduleList
+.moduleList
 {
 	white-space: nowrap;
 }
 
-#moduleIcons
+.moduleIcons
 {
 	border-top: 1px solid #333333;
 	border-left: 1em solid #333333;
 	padding: 0.5em 0em 0em 0.25em;
 }
 		
-#moduleName
+.moduleName
 {
 	border-top: 1px solid #333333;
 	padding: 0.5em 0.5em 0em 0em;
 }
 
-#moduleSpacer 
+.moduleSpacer 
 {
 	padding: 10px 0px 0px 0px;
 	margin: 0;
