--- a/data/msfweb/themes/default/style.css
+++ b/data/msfweb/themes/default/style.css
@@ -164,14 +164,28 @@ A.nav {
 	background:		white;
 }
 
-input {
-	font-weight:	bold;
-	color:			black;
-}
 
 select {
 	color:			black;
 	font-weight:	bold;
+	padding: 		2px 2px 2px 2px;	
+}
+
+input {
+	font-weight:	bold;
+	color:			black;
+	background:		#eeeeee;
+	color:			black;
+	padding: 		2px 10px 2px 10px;
+	border: 		1px solid grey;
+}
+
+input.button {
+	border-left: 		1px solid grey;
+	border-top: 		1px solid grey;
+	border-bottom: 		2px solid black;
+	border-right: 		2px solid black;		
+	padding: 			1px 5px 1px 5px;
 }
 
 .iconset 
@@ -204,3 +218,28 @@ select {
 	padding: 10px 0px 0px 0px;
 	margin: 0;
 }
+
+.CommandBar {
+
+}
+
+#CommandBarList {
+	padding: 		0 1px 1px;
+	margin-left: 	0;
+}
+
+#CommandBarList li {
+	list-style: 	none;
+	margin: 		0;
+	padding:		1em 1em 1em 1em;
+	display: 		inline;
+}
+
+#CommandBarList li a {
+	padding: 		0px 0px 0px 0px
+}
+
+#CommandBarList li a:hover {
+	border-bottom: 	1px solid #black;
+}
+
